upto registration error

--- a/.env
+++ b/.env
@@ -5,3 +5,11 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://siam:siam@cluster0.51rnnrl.mongodb.net/test" 
+NEXTAUTH_SECRET="NEXTAUTH_SECRET" 
+NODE_ENV="development" 
+
+GITHUB_ID=
+GITHUB_SECRET=
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
