auth by google and git hub

--- a/.env
+++ b/.env
@@ -8,8 +8,8 @@ DATABASE_URL="mongodb+srv://siam:siam@cluster0.51rnnrl.mongodb.net/test"
 NEXTAUTH_SECRET="NEXTAUTH_SECRET" 
 NODE_ENV="development" 
 
-GITHUB_ID=
-GITHUB_SECRET=
+GITHUB_ID=4992817d7b2ade9f8c61
+GITHUB_SECRET=cf070f0ef321ca5f5ccfb88984dc9117859b36a7
 
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=325309920423-7qfo4arjeurkqfvk287scc24n172obdv.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
