conversation messagebox show and coudnary up

--- a/.env
+++ b/.env
@@ -13,3 +13,5 @@ GITHUB_SECRET=cf070f0ef321ca5f5ccfb88984dc9117859b36a7
 
 GOOGLE_CLIENT_ID=325309920423-7qfo4arjeurkqfvk287scc24n172obdv.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dlx1gc7l4"
