settings modal done

--- a/.env
+++ b/.env
@@ -15,3 +15,4 @@ GOOGLE_CLIENT_ID=325309920423-7qfo4arjeurkqfvk287scc24n172obdv.apps.googleuserco
 GOOGLE_CLIENT_SECRET=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
 
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dlx1gc7l4"
+CLOUDINARY_PRESET="dlx1gc7l4"
