puser & update message - seen

--- a/.env
+++ b/.env
@@ -16,3 +16,8 @@ GOOGLE_CLIENT_SECRET=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
 
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dlx1gc7l4"
 CLOUDINARY_PRESET="dlx1gc7l4"
+
+NEXT_PUBLIC_PUSHER_APP_KEY=0dce552710bb4cd5245c
+PUSHER_APP_ID=1603574
+PUSHER_SECRET=0eac9e2c1422a4f5f3f8
+PUSHER_CLUSTER=ap2
